correcciones de carpetas, funciones create card y get one card

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/asset/img/mesa/mesa1.jpg);
+    background-image: url(/assets/img/mesa/mesa1.jpg);
     color: white;
     font-family: 'Anton', sans-serif;
 }
